src/main/webapp/less/ContentView.less
// Core variables and mixins
@import "mixins.less";

// --------- ContentView --------- //
.ContentView {
  .fitparent();
  min-width: 650px;

  .sidenav-ctn {
    position: absolute;
    top: 43px;
    left: 0;
    bottom: 0;
    width: 280px;
  }

  .search-form {
    position: absolute;
    left: 250px;
    right: 200px;
    top: -90px;
    margin: 40px auto 40px auto;

    input {
      display: block;
      position: absolute;
      left: 20px;
      right: 50px;
      height: 40px;
      border-radius: 5px;
      border-width: 2px;
      border-style: solid;
      border-color: #D8D8D9;
      padding: 5px 10px 5px 40px;
      margin-right: 10px;
      background: #F0F0F0;
    }
    i.glyphicon-search {
      position: absolute;
      top: 6px;
      left: 25px;
      color:#A3A3A3;
      font-size: 20px;
      z-index: 900;
      font-size: 25px;
      cursor:pointer;
    }

    .search-info {
      display: block;
      position: relative;
      width: 100%;
      span {
        display: block;
        position: absolute
      }
      .resultTime {
        left: 100%;
        top: 22px;
        color: #999;
        width: 200px;
        margin-left: -125px;
      }
      .resultCount {
        top: 62px;
        font-weight: bold;
        color: #666;
        width:150px;
        min-width: 150px;
        text-align: right;
      }
    }

  }


  .search-result {
    top: 40px;
    right: 50px;
    bottom: 0;
    left: 0px;
    position: absolute;
    margin: 0px auto 20px auto;
    padding: 5px;
    min-width: 600px;
     
    span.actions {
      display: none;
      float: left;
      margin-left: 30px;
      margin-top: -50px;
      label {
        margin-top:10px;
        display:inline-block;
        font-weight: bold;
      }
      label.checkbox.selected {
        color: #b25c05;
      }
      .btn{
        margin-top:-25px;
        margin-left:5px;
      }
    }


    div.page {
      position: absolute;
      top: -35px;
      right: 0;
      left: 200px;
      height: 30px;
    }

    div.btnPopupColumns {
      position: absolute;
      width: 40px;
      right: -45px;
      top: 7px;
      height: 30px;
      font-size: 60px;
      background: #e0e0e0;
      border: none;
      color: #ffffff;
      border-radius: 0px;
      padding: 0px 12px;
      height: 93px;
	  padding-top: 4px;
	  padding-left:3px;
    }

    .tableContainer {
      .fitparent();
      table {
        display:block;
        position: relative;
        width: 100%;
        height: 100%;
        overflow: hidden;
        font-size: 14px;
        tr {
          vertical-align: top;
          td, th {
            padding-left: 4px;
            padding-top: 7px;
            text-align: left;
          }
        }
        thead tr {
          display: block;
          position: relative;

          th {
//            font-weight: bold;
			height:108px;
			color:#fff;
			font-size: 18px;
			.headerTh{
				height:100%;
				padding: 4px 10px;
				position: relative;
				padding-left: 4px;
/*				.addFilter{
					position: absolute;
					bottom: 0;
					font-weight: normal;
					cursor:pointer;
					z-index:1;
				}*/
                .selectedItems{
                  /*padding-left:14px;
                  padding-right:14px;*/
                  position: absolute;
                  bottom: 5px;
                  left: 5px;
                  right: 5px;
                  max-height: 65px;
                  font-size: 12px;
                  vertical-align: bottom;
                  .item, .addFilter{
                    padding: 2px;
                    margin: 1px;
                    line-height: 12px;
                    display:inline-block;
                    overflow: hidden;
                    white-space: nowrap;
                    text-overflow: ellipsis;
                    word-break: normal;
                    font-size: 12px;
                    vertical-align: bottom;
                    cursor: pointer;
                  }

                  .item {
                    max-width: 200px;
                  }

                .addFilter{
                  cursor:pointer;
                }
              }
			    .columnName{
			    	width: 90%;
					display: inline-block;
                    font-weight: normal;
					cursor:pointer;
			    }
			}
			.idTh{
				background: #ccc;
			}
			.nameTh{
				background: #d4c761;
			}
			.contactTh{
				background: #d4c761;
			}
			.CreatedDateTh{
				background: #E13CC7;
			}
			.titleTh{
				background: #3CE198;
			}
			.emailTh{
				background: #B33CE1;
			}
			.educationTh{
				background: #dc7a4d;
			}
			.companyTh{
				background: #33aad2;
			}
			.resumeTh{
				background: #A7EE3C;
			}
			.locationTh{
				background: #4bc272;
			}
			.skillTh{
				background: #e13c5e;
			}
            .desc, .asc {
              width: auto;
              display: none;
              margin-left: 5px;
              float: right;
              font-size: 10px;
              font-weight: normal;
            }
          }
          th.checkboxCol {
            width: 30px;
//            background: #ffffff;
//            border-color: white;
//            border:none;
          }
        }

        tbody {
          .fitparent();
          overflow-x:hidden;
          overflow-y: auto;
          top: 100px;
          tr {
            padding-bottom: 3px;
            min-height: 60px;
          }
          tr:nth-of-type(odd){

          }
          tr:nth-of-type(even){
            background: #ECECEC;
          }
          td {
            span {
              display:block;
              width: 100%;
              padding-left: 2px;
              text-overflow: ellipsis;
              word-break: break-word;
              overflow: hidden;
            }
          }
          td.checkboxCol {
            width: 30px;
            input[type="checkbox"]{
              margin-left: -5px;
            }
          }
          td[data-column='skill'],td[data-column='company'],td[data-column='education']{
             span {
//               min-height: 90px;
               overflow-y: auto;
             }
          }
        }
      }

      table.scrollTable tbody tr {
        border-bottom: 1px solid #dddddd;
        display:block;
      }

	  table.scrollTable tbody tr .resume-ico{
        cursor:pointer;
        margin-left: 20px;
      }
      table  tr.full {
        .fitparent();
        top:30px;
        td {
          width: 100%;
          .empty-search {
            position: absolute;
            width: 810px;
            height: 240px;
            border-radius: 15px;
            border-width: 2px;
            border-style: solid;
            border-color: #B6B4B4;
            top: 0px;
            left:50%;
            text-align: center;
            font-size: 20px;
            color: #bbbbbb;
            padding-top: 80px;
            margin-left: -405px;
          }
          .loading {
            position: absolute;
            top: 70px;
            left: 50%;
            width: 300px;
            margin-left: -150px;
            font-size: 20px;
            color: #bbbbbb;
            background: #ddd;
            height: 80px;
            text-align: center;
            padding-top: 35px;
          }

          .alert-error, .alert-info {
            position: absolute;
            top: 70px;
            left: 50%;
            width: 300px;
            margin-left: -150px;
          }
        }
      }
    }

  }

  .search-info {
    display: block;
    color: #777;
    width: 375px;
    text-align: right;
    height: 16px;
  }

}

// --------- /ContentView --------- //

